Änderrung an Internet Verbindung

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 //hier kommen Filenamen rein, die nicht in die Git-Repo sollen
 //z.B. Systemdateien wie .DS_Store (wird auf Mac automatisch angelegt)
 .DS_Store
+secure.h
